added firebase database functionality

--- a/app/src/main/res/layout/note_fragment.xml
+++ b/app/src/main/res/layout/note_fragment.xml
@@ -35,16 +35,28 @@
             app:layout_constraintTop_toBottomOf="@id/noteET" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/tagsRV"
-            android:layout_width="match_parent"
+            android:id="@+id/tagsRV0"
+            android:layout_width="0dp"
+            app:layout_constraintHorizontal_weight="1"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            app:layout_constraintEnd_toStartOf="@id/tagsRV1"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tagsET" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/tagsRV1"
+            android:layout_width="0dp"
+            app:layout_constraintHorizontal_weight="1"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toEndOf="@id/tagsRV0"
             app:layout_constraintTop_toBottomOf="@id/tagsET" />
-
         <TextView
             android:id="@+id/notificationLabel"
             android:layout_width="wrap_content"
@@ -55,7 +67,7 @@
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tagsRV" />
+            app:layout_constraintTop_toBottomOf="@id/tagsRV0" />
 
         <Switch
             android:id="@+id/notificationSwitch"
