--- a/app/src/main/res/layout/tag_item.xml
+++ b/app/src/main/res/layout/tag_item.xml
@@ -7,10 +7,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/tags"
-        android:id="@+id/tagName" />
+        android:id="@+id/tagName"
+        android:textColor="#ffffff"/>
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tagChecked" />
+        android:id="@+id/tagChecked"
+        android:textColor="#ffffff"/>
 
 </LinearLayout>
