--- a/app/src/main/res/layout/tag_item.xml
+++ b/app/src/main/res/layout/tag_item.xml
@@ -12,7 +12,6 @@
     <CheckBox
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/tagChecked"
-        android:textColor="#ffffff"/>
+        android:id="@+id/tagChecked"/>
 
 </LinearLayout>
