--- a/app/src/main/res/layout/login_fragment.xml
+++ b/app/src/main/res/layout/login_fragment.xml
@@ -60,11 +60,20 @@
         app:layout_constraintStart_toEndOf="@id/newUserBU"
         app:layout_constraintEnd_toEndOf="@id/reenterET" />
 
+    <Button
+        style="@style/login_buttons"
+        android:layout_width="wrap_content"
+        android:text="@string/forgot_password"
+        android:id="@+id/forgotBU"
+        app:layout_constraintTop_toBottomOf="@id/newUserBU"
+        app:layout_constraintStart_toStartOf="@id/reenterET"
+        app:layout_constraintEnd_toEndOf="@id/loginBU" />
+
     <com.google.android.gms.common.SignInButton
         style="@style/login_buttons"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/newUserBU"
+        app:layout_constraintTop_toBottomOf="@id/forgotBU"
         app:layout_constraintStart_toEndOf="@id/facebookBU"
         app:layout_constraintEnd_toEndOf="@id/loginBU"
         android:id="@+id/googleBU"/>
@@ -75,7 +84,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        app:layout_constraintTop_toBottomOf="@id/newUserBU"
+        app:layout_constraintTop_toBottomOf="@id/forgotBU"
         app:layout_constraintStart_toStartOf="@id/newUserBU"
         app:layout_constraintEnd_toStartOf="@id/googleBU" />
 
