--- a/app/src/main/res/layout/multiple_notes_fragment.xml
+++ b/app/src/main/res/layout/multiple_notes_fragment.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
-        android:hint="@string/note"
+        android:hint="@string/notes"
         android:text=""
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
