tags in list check automatically, list set to fixed height

--- a/app/src/main/res/layout/note_fragment.xml
+++ b/app/src/main/res/layout/note_fragment.xml
@@ -38,7 +38,7 @@
             android:id="@+id/tagsRV0"
             android:layout_width="0dp"
             app:layout_constraintHorizontal_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="150dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
@@ -50,7 +50,7 @@
             android:id="@+id/tagsRV1"
             android:layout_width="0dp"
             app:layout_constraintHorizontal_weight="1"
-            android:layout_height="wrap_content"
+            android:layout_height="150dp"
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
